# wateringcan

./: Cargo.toml  LICENSE  README.md
examples/: README.md
examples/minimal/: Cargo.toml  index.html
examples/minimal/src/: lib.rs
src/: lib.rs
