[package]
name = "wateringcan"
version = "0.1.1"
repository = "https://github.com/EthanYidong/wateringcan"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
description = "An animation library for seed"
categories = ["wasm"]
license = "MIT"
readme = "./README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = "0.8"
